anna changes to main paper except results and final comments

--- a/output/auxiliary.tex
+++ b/output/auxiliary.tex
@@ -8,9 +8,9 @@
 \begin{tabular}{L{3cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{2cm}} \toprule
  & \multicolumn{6}{c}{Subject's Age} \\
 \textbf{Component}  & 16--21 & 21--30 & 31--34 & 34--50 & 61--67 & 68--Death \\ \midrule
-\textbf{Transfer Income} & & \cellcolor[gray]{.8} cNLSY & \multicolumn{3}{c}{\cellcolor[gray]{.7} NLSY79; PSID}  &  \\ \midrule
-\textbf{Subject Income} & & \cellcolor[gray]{.8} cNLSY & \multicolumn{3}{c}{\cellcolor[gray]{.7} NLSY79; PSID} & \\ \midrule
+\textbf{Transfer Income} & & \multicolumn{1}{c}{\cellcolor[gray]{.8} cNLSY} & \multicolumn{3}{c}{\cellcolor[gray]{.7} NLSY79; PSID}  &  \\ \midrule
+\textbf{Subject Income} & &  \multicolumn{1}{c}{\cellcolor[gray]{.8} cNLSY} & \multicolumn{3}{c}{\cellcolor[gray]{.7} NLSY79; PSID} & \\ \midrule
 \textbf{Health}  & \multicolumn{6}{c}{\cellcolor[gray]{.8} PSID; MEPS; MCBS; HRS}     \\ \midrule
-\textbf{Crime} & \multicolumn{4}{c}{\cellcolor[gray]{.8} NCDPS; NVS; UCR} \\ \bottomrule
+\textbf{Crime} & \multicolumn{4}{c}{\cellcolor[gray]{.8} NCDPS; NVS; UCRS} \\ \bottomrule
 \end{tabular}
 %\end{document}
