--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -29,6 +29,8 @@ University of Southern California \and
 Mar\'{i}a Jos\'{e} Prados \\
 University of Southern California \and
 Joshua Shea \\
+The University of Chicago \and 
+Jake C. Torcasso\\
 The University of Chicago}
 \date{First Draft: January 5, 2016\\ This Draft: \today}
 \maketitle
@@ -36,8 +38,7 @@ The University of Chicago}
 
 \doublespacing
 \begin{abstract}
-\noindent This paper uses data from two high-quality randomized controlled trials and multiple non-experimental sources to provide a life-cycle cost-benefit analysis of an early childhood education program, as well as an understanding of its components. We define and estimate parameters that have a link with different policy-evaluation questions. We explore the outcome categories that are most important when accounting for the programs' costs and benefits and formalize an alternative to the standard solution to multiple hypothesis testing \citep{Lehman_Romano_2005_AnnStat,Romano_Shaikh_2006_AnnStat}. We present results separately for males and females considering \noutcomes\ outcomes. \positivem\  (\positivesm) of the outcomes are positive (and significant) for males and \positivef\  (\positivesf) for females. These effects strengthen when comparing to no exposure to early childhood education. Pooling males and females, the benefit-to-cost ratio is \bcp\  (s.e. \bcsep) and the internal rate of return is \irrp\  (s.e. \irrsep). We perform sensitivity analysis and find that these estimates are robust to various perturbations of the parameters in the cost-benefit analysis.
-
+\noindent This paper uses data from two high-quality randomized controlled trials and multiple non-experimental sources to provide a life-cycle cost-benefit analysis of early childhood education programs, as well as an understanding of its components. We define and estimate parameters that have a link with different policy-evaluation questions. We explore the outcome categories that are most important when accounting for the programs' costs and benefits and formalize an alternative to the standard solution to multiple hypothesis testing \citep{Lehman_Romano_2005_AnnStat,Romano_Shaikh_2006_AnnStat}. We conclude that early childhood education programs are socially efficient by documenting a benefit-to-cost ratio of \bcp\  (s.e. \bcsep) and an internal rate of return of \irrp\  (s.e. \irrsep). We perform sensitivity analysis and find that these estimates are robust to various perturbations of the parameters and assumptions in the cost-benefit analysis.
 \end{abstract} 
 
 \singlespacing
@@ -121,7 +122,7 @@ Chetty_Friedman_etal_2011_QJoE}. We find that the benefit-to-cost ratio is $0.4$
 
 \noindent The design and implementation of both programs were similar. Both studies had a small sample size. ABC recruited 122 subjects over four cohorts, while CARE recruited 67 subjects over two cohorts. ABC had two phases, the first of which lasted from birth until age 5. In this phase, children were randomly assigned to either treatment or control groups. The treatment group received: (i) center-based childcare; (ii) breakfast, lunch, an afternoon snack, iron-fortified formula for the first 15 months of life, and diapers until age 3; and (iii) medical care from licensed nurses who were supervised by a pediatrician, frequent health check-ups, and hospital referrals when serious medical treatment was needed. In contrast, the control group only received iron-fortified formula for the first 15 months and diapers until age 3. In the second phase of treatment, at the age of 5, the 95 subjects still in the study were randomly assigned again to treatment or control groups, independently of their status in the prior randomization. This second-phase treatment consisted of home visits targeting both children and parents and lasted until age 8.\\ 
 
-\noindent  CARE also had two treatment phases, though subjects were randomized only once. While the two programs had essentially identical second phases, the first phase of CARE differed from the first phase of ABC by including a family education component. This component was designed to study the effects of improving the home environment on child development.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.} The first treatment phase of CARE lasted from birth until age 5. Children were randomly assigned to one of three experimental groups: control (23 children), family education (25 children), and both family education and center-based childcare (17 children). As in ABC, the control group received iron-fortified formula from birth to 15 months and diapers to age 3. The family education group received home visits that aimed to help parents solve common problems related to childrearing. Both treatment groups received the second phase of treatment from ages 5 to 8. The ABC and CARE programs shared many objectives and program characteristics, as summarized in Table~\ref{tab:programcomparison}.\\
+\noindent  CARE also had two treatment phases, though subjects were randomized only once. While the two programs had essentially identical second phases, the first phase of CARE differed from the first phase of ABC by including a family education component. This component was designed to study the effects of improving the home environment on child development.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.} The first treatment phase of CARE lasted from birth until age 5. Children were randomly assigned to one of three experimental groups: control (23 children), family education (25 children), and both family education and center-based childcare (17 children). As in ABC, the control group received iron-fortified formula from birth to 15 months and diapers to age 3. The family education group received home visits that aimed to help parents solve common problems related to childrearing. Both treatment groups received the second phase of treatment from ages 5 to 8. The ABC and CARE programs shared many objectives and program characteristics, as summarized in Table~\ref{tab:programcomparison}.
 
 \input{output/abccare_programcomparison.tex}
 
@@ -392,6 +393,10 @@ that the ABC subjects will have after that age. The NCDPS data provide lifetime 
 
 \noindent We use an alternative methodology for health-related outcomes. There are three main reasons for this: (i) health outcomes such as diabetes or heart disease are absorbing states; (ii) health outcomes are highly interdependent within and across time; and (iii) there is no evident time period available to finish accounting for benefits and costs. For example, for income we extrapolate up to the retirement age of 67. However, for health, we need to predict an age of death for each individual. Thus, using the notation so far, it is not sufficient to condition on $W, Z, X$ to recover a credible estimate of the treatment effect. Instead, we use an adaptation of the Future America Model (FAM) that projects health outcomes from the age of the supplemental health follow-up during the mid-30s up to the projected death of the individuals \citep{Goldman_etal_2015_Future-Elderly-Model-Report}. \\
 
+\noindent We provide a brief description of the model in this subsection. Appendix~\ref{appendix:health} provides a thorough discussion. The methodology has five steps: (i) estimate the age-by-age health state transition probabilities using the Panel Study of Income Dynamics (PSID); (ii) match these transition probabilities to the ABC individuals based on observed characteristics; (iii) estimate quality-adjusted life year (QALY) models using the Medical Expenditure Panel Survey (MEPS) and the PSID; (iv) estimate medical cost models using the MEPS and the Medicare Current Beneficiary Survey (MCBS), allowing estimates to differ by health state and observed characteristics; and (v) predict the medical expenditure and QALYs that correspond to the simulated individual health trajectories. \\
+
+\noindent Our microsimulation model starts the health predictions at age 30, with the information on observed characteristics available at this age. We restrict it to the individuals for whom we have information from the age-34 health follow-up. This allows us to account for components that are crucial for predicting health outcomes, such as the body mass index (BMI). The models predict the probability of being in any of the states in the horizontal axis of Table~\ref{table:transition} at age $a+1$ based on the state at age $a$, which is described by the vertical axis of the table. The crosses indicate if the estimation of the probability of being in a state at age $a$ is relevant for the state at age $a + 1$. Absorbing states are an exception. For example, heart disease at age $a$ does not enter in the estimation of transitions for heart disease at age $a+1$ because it is an absorbing state: once a person has heart disease, she carries it through the rest of her life. The same is true for chronic or permanent conditions such as hypertension, having a stroke, etc.
+
 \begin{sidewaystable}[H]
 \begin{threeparttable}
 \caption{Health State Transitions, Age $a$ as Predictor of Age $a+1$}\label{table:transition}
@@ -403,10 +408,6 @@ that the ABC subjects will have after that age. The NCDPS data provide lifetime 
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
-
-\noindent We provide a brief description of the model in this subsection. Appendix~\ref{appendix:health} provides a thorough discussion. The methodology has five steps: (i) estimate the age-by-age health state transition probabilities using the Panel Study of Income Dynamics (PSID); (ii) match these transition probabilities to the ABC individuals based on observed characteristics; (iii) estimate quality-adjusted life year (QALY) models using the Medical Expenditure Panel Survey (MEPS) and the PSID; (iv) estimate medical cost models using the MEPS and the Medicare Current Beneficiary Survey (MCBS), allowing estimates to differ by health state and observed characteristics; and (v) predict the medical expenditure and QALYs that correspond to the simulated individual health trajectories. \\
-
-\noindent Our microsimulation model starts the health predictions at age 30, with the information on observed characteristics available at this age. We restrict it to the individuals for whom we have information from the age-34 health follow-up. This allows us to account for components that are crucial for predicting health outcomes, such as the body mass index (BMI). The models predict the probability of being in any of the states in the horizontal axis of Table~\ref{table:transition} at age $a+1$ based on the state at age $a$, which is described by the vertical axis of the table. The crosses indicate if the estimation of the probability of being in a state at age $a$ is relevant for the state at age $a + 1$. Absorbing states are an exception. For example, heart disease at age $a$ does not enter in the estimation of transitions for heart disease at age $a+1$ because it is an absorbing state: once a person has heart disease, she carries it through the rest of her life. The same is true for chronic or permanent conditions such as hypertension, having a stroke, etc. \\
 
 \noindent At each age, once we obtain the transition probability for each health outcome, we draw $5,000$ Monte-Carlo simulations for each subject. Thus, each simulation depends on each individual's health history and on their particular characteristics. For every simulated trajectory of health outcomes, we are able to predict the lifetime medical expenditure using the models estimated from the MEPS and the MCBS. We are then able to obtain an estimate of the expected lifetime medical expenditure for every subject in our primary sample by taking the mean of each individual's simulated lifetime medical expenditure. The same procedure is applied to QALYs. This estimate is used as the dependent variable in our linear regressions for calculating treatment effects on health costs. \\
 
@@ -534,11 +535,9 @@ Note: This table summarizes the explanatory variables included in the models we 
 
 \noindent The estimates are robust to individually removing the rest of the components, and in most cases remain statistically significant. This happens for one of either two reasons: (i) the effects are substantial but they are heavily discounted because they happen later in life---e.g. labor income; or (ii) the effects happen early in life but are not as substantial---as the amount that the control-group parents pay for their children to attend alternative preschools.\\
 
-\noindent Next, we analyze the estimates when splitting the sample by males and females. Most of the estimates loose significance due to the reduction of observations after splitting the sample by gender. However, it is important to note that for both males and females, the estimates remain robust across the different instances of the sensitivity analysis.\\
+\noindent Next, we analyze the estimates when splitting the sample by males and females. Some of the estimates loose significance due to the reduction of observations after splitting the sample by gender. However, it is important to note that for both males and females, the estimates remain robust across the different instances of the sensitivity analysis.\\
 
-\noindent For females, we observe consistency except for the case where we remove the parental income component. We can observe the female sample is the main driver of parental income when comparing its net present value between females and males.\\
-
-\noindent For males, the estimates are robust as well. An exception occurs when we remove the component corresponding to quality-adjusted life years. Although the cost-to-benefit ratio remains virtually unchanged, the internal rate of return is negative. This internal rate of return is actually uninformative: it is negative due to the fact that, when excluding the quality-adjusted life years, the net-benefit streams cross from negative to positive generating multiple roots. The interpretation of the internal rate of return when the net-benefit streams cross in unclear \citep{Arrow-Levhari_1969_EJ}. This actually reinforces the importance of considering the improvement in the subject's life due to better health conditions.\footnote{The analysis in which we do not account for control substitution is the only case of crossing net-benefit streams.}\\
+\noindent For females, we observe consistency except for the case where we remove the parental income component. We can observe the female sample is the main driver of parental income when comparing its net present value between females and males.
 
 \begin{sidewaystable}[H] 
 \begin{threeparttable}
@@ -553,30 +552,30 @@ Removed Component	&	NPV	&	IRR	&	B/C	&	NPV	&	IRR	&	B/C	&	NPV	&	IRR	&	B/C	\\
 
 \midrule
 
-None	&		&	0.14	&	3.34	&		&	0.13	&	7.04	&		&	\textbf{0.10}	&	\textbf{4.88}	\\
-	&		&	(0.14)	&	(2.92)	&		&	(0.11)	&	(12.50)	&		&	(0.09)	&	(2.29)	\\ \\
-Parental Income	&	\textbf{158,118}	&	0.05	&	1.68	&	43,727	&	\textbf{0.12}	&	6.58	&	\textbf{75,187}	&	\textbf{0.08}	&	\textbf{4.09}	\\
-	&	(44,877)	&	(0.10)	&	(2.86)	&	(46,369)	&	(0.10)	&	(12.44)	&	(25,774)	&	(0.06)	&	(2.29)	\\
-Subject QALY	&	2,465	&	0.14	&	\textbf{3.32}	&	33,040	&	-.10	&	6.69	&	15,351	&	0.10	&	\textbf{4.72}	\\
-	&	(146,824)	&	(0.13)	&	(2.02)	&	(912,533)	&	(0.11)	&	(8.62)	&	(37,988)	&	(0.10)	&	(2.20)	\\
-Subject Labor Income	&	44,201	&	0.14	&	\textbf{2.88}	&	124,655	&	0.13	&	5.72	&	93,992	&	0.10	&	\textbf{3.89}	\\
+None	&		&	0.15	&	\textbf{3.42}	&		&	0.13	&	7.11	&		&	\textbf{0.10}	&	\textbf{4.93}	\\
+	&		&	(0.15)	&	(2.91)	&		&	(0.12)	&	(12.50)	&		&	(0.09)	&	(2.29)	\\\\
+Parental Income	&	\textbf{158,017}	&	0.05	&	1.75	&	45,511	&	\textbf{0.12}	&	6.63	&	\textbf{74,718}	&	\textbf{0.08}	&	\textbf{4.14}	\\
+	&	(43,586)	&	(0.10)	&	(2.86)	&	(45,289)	&	(0.10)	&	(12.44)	&	(25,250)	&	(0.06)	&	(2.29)	\\
+Subject QALY	&	2,465	&	0.15	&	\textbf{3.39}	&	33,040	&	-.10	&	6.74	&	15,351	&	0.10	&	\textbf{4.77}	\\
+	&	(146,824)	&	(0.14)	&	(2.02)	&	(912,533)	&	(0.12)	&	(8.62)	&	(37,988)	&	(0.11)	&	(2.20)	\\
+Subject Labor Income	&	44,201	&	0.16	&	\textbf{2.95}	&	124,655	&	0.13	&	5.78	&	93,992	&	0.10	&	\textbf{3.94}	\\
 	&	(151,724)	&	(0.14)	&	(2.43)	&	(639,086)	&	(0.11)	&	(10.33)	&	(119,314)	&	(0.09)	&	(1.97)	\\
-Subject Transfer Income	&	-396	&	0.14	&	3.35	&	-1,158	&	0.13	&	7.05	&	7,519	&	\textbf{0.10}	&	\textbf{4.80}	\\
+Subject Transfer Income	&	-396	&	0.16	&	\textbf{3.42}	&	-1,158	&	0.13	&	7.10	&	7,519	&	\textbf{0.10}	&	\textbf{4.85}	\\
 	&	(36,216)	&	(0.15)	&	(2.87)	&	(44,350)	&	(0.12)	&	(12.30)	&	(9,755)	&	(0.09)	&	(2.29)	\\
-Medical Expenditures	&	14,344	&	0.14	&	3.19	&	14,905	&	\textbf{0.13}	&	6.88	&	14,645	&	\textbf{0.10}	&	\textbf{4.72}	\\
-	&	(82,883)	&	(0.13)	&	(2.42)	&	(146,935)	&	(0.09)	&	(13.11)	&	(39,129)	&	(0.07)	&	(2.20)	\\
-Control Contamination	&	\textbf{12,857}	&	0.12	&	3.21	&	\textbf{10,355}	&	0.12	&	6.93	&	\textbf{10,094}	&	\textbf{0.10}	&	\textbf{4.77}	\\
-	&	(2,152)	&	(0.13)	&	(2.92)	&	(1,536)	&	(0.11)	&	(12.50)	&	(1,523)	&	(0.08)	&	(2.28)	\\
-Education Costs	&	-47,183	&	0.15	&	\textbf{3.84}	&	15,340	&	0.12	&	6.88	&	-11,353	&	\textbf{0.10}	&	\textbf{5.00}	\\
-	&	(14,395)	&	(0.14)	&	(2.92)	&	(13,222)	&	(0.11)	&	(12.51)	&	(11,316)	&	(0.09)	&	(2.31)	\\
-Crime Costs	&	\textbf{133,116}	&	0.12	&	1.94	&	427,343	&	0.07	&	2.54	&	\textbf{257,780}	&	0.07	&	2.16	\\
-	&	(44,756)	&	(0.15)	&	(2.85)	&	(447,081)	&	(0.10)	&	(11.36)	&	(172,485)	&	(0.07)	&	(1.45)	\\ \\
-Deadweight Loss	&		&	0.21	&	\textbf{4.65}	&		&	0.15	&	10.12	&		&	0.13	&	\textbf{6.96}	\\
-	&		&	(0.19)	&	(4.22)	&		&	(0.14)	&	(18.35)	&		&	(0.13)	&	(3.39)	\\
-0\% Discount Rate	&		&		&	7.17	&		&		&	16.64	&		&		&	\textbf{12.75}	\\
+Medical Expenditures	&	14,344	&	0.15	&	\textbf{3.27}	&	14,905	&	\textbf{0.13}	&	6.94	&	14,645	&	\textbf{0.10}	&	\textbf{4.78}	\\
+	&	(82,883)	&	(0.13)	&	(2.42)	&	(146,935)	&	(0.09)	&	(13.11)	&	(39,129)	&	(0.08)	&	(2.20)	\\
+Control Substitution 	&	\textbf{19,884}	&	0.12	&	3.21	&	\textbf{15,608}	&	0.12	&	6.93	&	\textbf{15,073}	&	\textbf{0.10}	&	\textbf{4.77}	\\
+	&	(3,147)	&	(0.13)	&	(2.92)	&	(2,324)	&	(0.11)	&	(12.50)	&	(2,229)	&	(0.08)	&	(2.28)	\\
+Education Costs	&	-47,183	&	0.16	&	\textbf{3.91}	&	15,340	&	0.13	&	6.93	&	-11,353	&	\textbf{0.11}	&	\textbf{5.05}	\\
+	&	(14,395)	&	(0.15)	&	(2.92)	&	(13,222)	&	(0.11)	&	(12.51)	&	(11,316)	&	(0.09)	&	(2.31)	\\
+Crime Costs	&	\textbf{133,116}	&	0.14	&	2.02	&	427,343	&	0.07	&	2.59	&	\textbf{257,780}	&	0.07	&	2.22	\\
+	&	(44,756)	&	(0.15)	&	(2.85)	&	(447,081)	&	(0.10)	&	(11.36)	&	(172,485)	&	(0.07)	&	(1.45)	\\\\
+Deadweight Loss	&		&	0.23	&	\textbf{4.74}	&		&	0.15	&	10.19	&		&	0.13	&	\textbf{7.02}	\\
+	&		&	(0.20)	&	(4.22)	&		&	(0.14)	&	(18.35)	&		&	(0.14)	&	(3.40)	\\
+0\% Discount Rate	&		&		&	7.25	&		&		&	16.70	&		&		&	\textbf{12.80}	\\
 	&		&		&	(8.77)	&		&		&	(42.06)	&		&		&	(5.98)	\\
-5\% Discount Rate	&		&		&	\textbf{2.34}	&		&		&	4.34	&		&		&	\textbf{2.83}	\\
-	&		&		&	(1.58)	&		&		&	(6.39)	&		&		&	(1.31)	\\
+5\% Discount Rate	&		&		&	\textbf{2.41}	&		&		&	4.39	&		&		&	\textbf{2.88}	\\
+	&		&		&	(1.57)	&		&		&	(6.40)	&		&		&	(1.31)	\\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
@@ -584,6 +583,8 @@ Deadweight Loss	&		&	0.21	&	\textbf{4.65}	&		&	0.15	&	10.12	&		&	0.13	&	\textbf{
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
+
+\noindent For males, the estimates are robust as well. An exception occurs when we remove the component corresponding to quality-adjusted life years. Although the cost-to-benefit ratio remains virtually unchanged, the internal rate of return is negative. This internal rate of return is actually uninformative: it is negative due to the fact that, when excluding the quality-adjusted life years, the net-benefit streams cross from negative to positive generating multiple roots. The interpretation of the internal rate of return when the net-benefit streams cross in unclear \citep{Arrow-Levhari_1969_EJ}. This actually reinforces the importance of considering the improvement in the subject's life due to better health conditions.\footnote{The analysis in which we do not account for control substitution is the only case of crossing net-benefit streams.}\\
 
 \noindent Finally, we provide a cost-benefit analysis of the program when accounting for control substitution (Table~\ref{table:cbacs}). The first row shows the estimates without accounting for control substitution, i.e. the same as those of the first row in Table~\ref{table:cba}. The second and third rows present results for the two counterfactual comparisons we consider.\\ 
 
@@ -603,12 +604,13 @@ Deadweight Loss	&		&	0.21	&	\textbf{4.65}	&		&	0.15	&	10.12	&		&	0.13	&	\textbf{
 Estimate 	&	IRR	&	B/C	&	IRR	&	B/C	&	IRR	&	B/C	\\
 \midrule
 
-Baseline	&	0.14	&	3.34	&	0.13	&	7.04	&	\textbf{0.10}	&	\textbf{4.88}	\\
-	&	(0.14)	&	(2.92)	&	(0.11)	&	(12.50)	&	(0.09)	&	(2.29)	\\
-Relative to Staying at Home 	&	-0.15	&	\textbf{6.33}	&		&	0.01	&	0.05	&	2.15	\\
-	&	(0.17)	&	(2.01)	&		&	(2.54)	&	(0.08)	&	(2.29)	\\
-Relative to Alternative Preschools	&	\textbf{0.15}	&	2.16	&	\textbf{0.20}	&	\textbf{9.81}	&	\textbf{0.12}	&	\textbf{6.06}	\\
-	&	(0.14)	&	(1.40)	&	(0.15)	&	(6.23)	&	(0.08)	&	(2.43)	\\
+Baseline	&	0.15	&	\textbf{3.42}	&	0.13	&	7.11	&	\textbf{0.10}	&	\textbf{4.93}	\\
+	&	(0.15)	&	(2.91)	&	(0.12)	&	(12.50)	&	(0.09)	&	(2.29)	\\
+Relative to Staying at Home &	-0.15	&	\textbf{6.30}	&		&	0.08	&	0.05	&	2.16	\\
+	&	(0.15)	&	(2.01)	&		&	(2.53)	&	(0.08)	&	(2.29)	\\
+Relative to Alternative Preschools	&	\textbf{0.16}	&	2.20	&	\textbf{0.21}	&	\textbf{9.87}	&	\textbf{0.12}	&	\textbf{5.49}	\\
+	&	(0.13)	&	(1.40)	&	(0.15)	&	(6.22)	&	(0.08)	&	(2.43)	\\
+
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
